--- a/SimpleDevToolbox/Client/Shared/NavMenu.razor
+++ b/SimpleDevToolbox/Client/Shared/NavMenu.razor
@@ -1,5 +1,5 @@
 ﻿<div class="top-row pl-4 navbar navbar-dark">
-    <a class="navbar-brand" href="">SimpleDevToolbox</a>
+    <a class="navbar-brand" href="">Simple Dev Toolbox</a>
     <button class="navbar-toggler" @onclick="ToggleNavMenu">
         <span class="navbar-toggler-icon"></span>
     </button>
@@ -9,12 +9,12 @@
     <ul class="nav flex-column">
         <li class="nav-item px-3">
             <NavLink class="nav-link" href="" Match="NavLinkMatch.All">
-                <span class="oi oi-home" aria-hidden="true"></span> Home
+                <Icon Name="IconName.Home" /> Home
             </NavLink>
         </li>
         <li class="nav-item px-3">
             <NavLink class="nav-link" href="guids">
-                <span class="oi oi-plus" aria-hidden="true"></span> Create GUIDs
+                <Icon Name="@("fa-atom")" /> Create GUIDs
             </NavLink>
         </li>
         @*<li class="nav-item px-3">
