--- a/SimpleDevToolbox/Client/wwwroot/css/app.css
+++ b/SimpleDevToolbox/Client/wwwroot/css/app.css
@@ -1,4 +1,4 @@
-﻿@import url('open-iconic/font/css/open-iconic-bootstrap.min.css');
+﻿/*@import url('open-iconic/font/css/open-iconic-bootstrap.min.css');
 
 html, body {
     font-family: 'Helvetica Neue', Helvetica, Arial, sans-serif;
@@ -7,7 +7,7 @@ html, body {
 a, .btn-link {
     color: #0366d6;
 }
-
+*/
 /*.btn-primary {
     color: #fff;
     background-color: #1b6ec2;
