--- a/SimpleDevToolbox/Server/Pages/_Host.cshtml
+++ b/SimpleDevToolbox/Server/Pages/_Host.cshtml
@@ -15,6 +15,7 @@
 
     <link href="_content/Blazorise/blazorise.css" rel="stylesheet" />
     <link href="_content/Blazorise.Bootstrap/blazorise.bootstrap.css" rel="stylesheet" />
+    <link href="_content/Blazorise.Snackbar/blazorise.snackbar.css" rel="stylesheet" />
 
     <link href="css/app.css" rel="stylesheet" />
     <link href="SimpleDevToolbox.Client.styles.css" rel="stylesheet" />
