--- a/SimpleDevToolbox/Client/_Imports.razor
+++ b/SimpleDevToolbox/Client/_Imports.razor
@@ -8,5 +8,7 @@
 @using Microsoft.JSInterop
 @using SimpleDevToolbox.Client
 @using SimpleDevToolbox.Client.Shared
+@using SimpleDevToolbox.Shared
+@using SimpleDevToolbox.Shared.Services
 @using Blazorise
 @using Blazorise.Components 
