Rename to BasicTools

--- a/BasicTools.Client/Pages/Index.razor
+++ b/BasicTools.Client/Pages/Index.razor
@@ -1,7 +1,7 @@
 ﻿@page "/"
 
-<h1>Simple Dev Toolbox</h1>
+<h1>Basic Dev Toolbox</h1>
 
-Your one-stop shop for simple dev tools!
+Your one-stop shop for basic developer tools!
 
 @*<SurveyPrompt Title="How is Blazor working for you?" />*@
