--- a/BasicTools.Client/Shared/NavMenu.razor
+++ b/BasicTools.Client/Shared/NavMenu.razor
@@ -1,5 +1,5 @@
 ﻿<div class="top-row pl-4 navbar navbar-dark">
-    <a class="navbar-brand" href="">Simple Dev Toolbox</a>
+    <a class="navbar-brand" href="">Basic Dev Tools</a>
     <button class="navbar-toggler" @onclick="ToggleNavMenu">
         <span class="navbar-toggler-icon"></span>
     </button>
