--- a/BasicTools.Client/_Imports.razor
+++ b/BasicTools.Client/_Imports.razor
@@ -6,9 +6,9 @@
 @using Microsoft.AspNetCore.Components.Web.Virtualization
 @using Microsoft.AspNetCore.Components.WebAssembly.Http
 @using Microsoft.JSInterop
-@using SimpleDevToolbox.Client
-@using SimpleDevToolbox.Client.Shared
-@using SimpleDevToolbox.Shared
-@using SimpleDevToolbox.Shared.Services
+@using BasicTools.Client
+@using BasicTools.Client.Shared
+@using BasicTools.Shared
+@using BasicTools.Shared.Services
 @using Blazorise
 @using Blazorise.Components 
