--- a/BasicTools.Server/Pages/_Host.cshtml
+++ b/BasicTools.Server/Pages/_Host.cshtml
@@ -8,7 +8,7 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
     
-    <component type="typeof(SimpleDevToolbox.Client.Shared.HeadSection)" render-mode="WebAssemblyPrerendered"  />
+    <component type="typeof(BasicTools.Client.Shared.HeadSection)" render-mode="WebAssemblyPrerendered"  />
 
     <base href="/" />
 
@@ -20,13 +20,13 @@
     <link href="_content/Blazorise.Snackbar/blazorise.snackbar.css" rel="stylesheet" />
 
     <link href="css/app.css" rel="stylesheet" />
-    <link href="SimpleDevToolbox.Client.styles.css" rel="stylesheet" />
+    <link href="BasicTools.Client.styles.css" rel="stylesheet" />
     <link href="manifest.json" rel="manifest" />
     <link rel="apple-touch-icon" sizes="512x512" href="icon-512.png" />
 </head>
 
 <body>
-    <component type="typeof(SimpleDevToolbox.Client.App)" render-mode="WebAssemblyPrerendered" />
+    <component type="typeof(BasicTools.Client.App)" render-mode="WebAssemblyPrerendered" />
 
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js" integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN" crossorigin="anonymous"></script>
