--- a/BasicTools.Client/Pages/Index.razor
+++ b/BasicTools.Client/Pages/Index.razor
@@ -2,6 +2,6 @@
 
 <h1>Basic Dev Toolbox</h1>
 
-Your one-stop shop for basic developer tools!
+Your one-stop shop for basic, online developer tools!
 
 @*<SurveyPrompt Title="How is Blazor working for you?" />*@
