--- a/BasicTools.Client/Shared/NavMenu.razor
+++ b/BasicTools.Client/Shared/NavMenu.razor
@@ -14,7 +14,12 @@
         </li>
         <li class="nav-item px-3">
             <NavLink class="nav-link" href="guids">
-                <Icon Name="@("fa-atom")" /> Create GUIDs
+                <Icon Name="@("fa-atom")" /> GUID Generation
+            </NavLink>
+        </li>
+        <li class="nav-item px-3">
+            <NavLink class="nav-link" href="json">
+                <Icon Name="IconName.Code" /> Json Parsing
             </NavLink>
         </li>
     </ul>
