--- a/BasicTools.Client/Pages/Guids.razor
+++ b/BasicTools.Client/Pages/Guids.razor
@@ -1,6 +1,6 @@
 ﻿@page "/guids"
 
-<h1>Create GUIDs</h1>
+<h1>GUID Generation</h1>
 
 <div class="row">
     <div class="col-xl-4 col-lg-6">
@@ -8,7 +8,7 @@
             <DataAnnotationsValidator />
 
             <InputRadioGroup @bind-Value="_createGuidModel.GenerationMode">
-                <span class="mr-3">GUID Generation Mode:</span>
+                <span class="mr-3">Generation Mode:</span>
                 @foreach (var mode in (GenerationModes[])Enum.GetValues(typeof(GenerationModes)))
                 {
                     var id = $"mode_{mode}";
