--- a/BasicTools.Server/Pages/_Host.cshtml
+++ b/BasicTools.Server/Pages/_Host.cshtml
@@ -7,8 +7,8 @@
 <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
-    
-    <component type="typeof(BasicTools.Client.Shared.HeadSection)" render-mode="WebAssemblyPrerendered"  />
+
+    <component type="typeof(BasicTools.Client.Shared.HeadSection)" render-mode="WebAssemblyPrerendered" />
 
     <base href="/" />
 
@@ -23,6 +23,8 @@
     <link href="BasicTools.Client.styles.css" rel="stylesheet" />
     <link href="manifest.json" rel="manifest" />
     <link rel="apple-touch-icon" sizes="512x512" href="icon-512.png" />
+
+    <script data-ad-client="ca-pub-8384850892685045" async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
 </head>
 
 <body>
