--- a/BasicTools.Server/Pages/_Host.cshtml
+++ b/BasicTools.Server/Pages/_Host.cshtml
@@ -25,6 +25,16 @@
     <link rel="apple-touch-icon" sizes="512x512" href="icon-512.png" />
 
     <script data-ad-client="ca-pub-8384850892685045" async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
+
+    <!-- Global site tag (gtag.js) - Google Analytics -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-ZWHGQ6Y5T1"></script>
+    <script>
+        window.dataLayer = window.dataLayer || [];
+        function gtag() { dataLayer.push(arguments); }
+        gtag('js', new Date());
+
+        gtag('config', 'G-ZWHGQ6Y5T1');
+    </script>
 </head>
 
 <body>
