--- a/BasicTools.Client/Pages/Guids.razor
+++ b/BasicTools.Client/Pages/Guids.razor
@@ -1,9 +1,25 @@
 ﻿@page "/guids"
 
-<h1>GUID Generation</h1>
+<h1>GUID / UUID Generation</h1>
+
+<LayoutSetter>
+    <RightSidebar>
+        <h4>Generation Mode:</h4>
+        <ul>
+            <li><strong>Default:</strong><br />Creates GUIDs using the default .NET implementation for creating GUIDs (ex: <span class="code">Guid.NewGuid()</span>)</li>
+            <li><strong>Cryptographic:</strong><br />Creates GUIDs using the .NET's RandomNumberGenerator to obtain 16 random bytes and constructing a GUID from it.</li>
+        </ul>
+        
+        <hr />
+
+        <h3>What is a GUID?</h3>
+        <p class="mb-0">A GUID is an acronyom that stands for Globally Unique Identifier, they are also referred to as UUIDs or Universaly Unique Identifiers - there is no real difference between the two. Technically they are 128-bit unique reference numbers used in computing which are highly unlikely to repeat when generated despite there being no central GUID authority to ensure uniqueness.</p>
+        <p class="text-right"><small><a href="http://guid.one/guid" target="WhatsAGuid">(Full Reference)</a></small></p>
+    </RightSidebar>
+</LayoutSetter>
 
 <div class="row">
-    <div class="col-xl-4 col-lg-6">
+    <div class="col-xl-5 col-lg-6">
         <EditForm EditContext="_editContext" OnValidSubmit="CreateGuids">
             <DataAnnotationsValidator />
 
@@ -60,7 +76,7 @@
         }
     </div>
 
-    <div class="col-xl-8 col-lg-6">
+    <div class="col-xl-7 col-lg-6">
         @if (_guids != null)
         {
             @if (_guids.Length > 1)
