--- a/BasicTools.Client/Pages/Guids.razor
+++ b/BasicTools.Client/Pages/Guids.razor
@@ -6,8 +6,8 @@
     <RightSidebar>
         <h4>Generation Mode:</h4>
         <ul>
-            <li><strong>Default:</strong><br />Creates GUIDs using the default .NET implementation for creating GUIDs (ex: <span class="code">Guid.NewGuid()</span>)</li>
-            <li><strong>Cryptographic:</strong><br />Creates GUIDs using the .NET's RandomNumberGenerator to obtain 16 random bytes and constructing a GUID from it.</li>
+            <li><strong>Default:</strong><br />Creates GUIDs using the <a href="https://docs.microsoft.com/en-us/dotnet/api/system.guid.newguid" target="msRef">default .NET implementation</a> for creating GUIDs (ex: <span class="code">Guid.NewGuid()</span>)</li>
+            <li><strong>Cryptographic:</strong><br />Creates GUIDs using the <a href="https://docs.microsoft.com/en-us/dotnet/api/system.security.cryptography.randomnumbergenerator.getbytes" target="msRef">.NET's Random Number Generator</a> to obtain 16 random bytes and <a href="https://docs.microsoft.com/en-us/dotnet/api/system.guid.-ctor#System_Guid__ctor_System_Byte___" target="msRef">constructing a GUID</a> from it.</li>
         </ul>
         
         <hr />
