added github link

--- a/BasicTools.Client/Pages/Index.razor
+++ b/BasicTools.Client/Pages/Index.razor
@@ -2,6 +2,8 @@
 
 <h1>Basic Dev Toolbox</h1>
 
-Your one-stop shop for basic, online developer tools!
+<p>Your one-stop shop for basic, online developer tools!</p>
+
+<p>This site is an <a href="https://github.com/NArnott/BasicTools" target="gitRepo">open source project</a> hosted on GitHub. Contributions are welcome!</p>
 
 @*<SurveyPrompt Title="How is Blazor working for you?" />*@
