Update Analytics Tag

--- a/BasicTools.Server/Pages/_Host.cshtml
+++ b/BasicTools.Server/Pages/_Host.cshtml
@@ -29,13 +29,13 @@
         <script data-ad-client="ca-pub-8384850892685045" async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
 
         <!-- Global site tag (gtag.js) - Google Analytics -->
-        <script async src="https://www.googletagmanager.com/gtag/js?id=G-ZWHGQ6Y5T1"></script>
+        <script async src="https://www.googletagmanager.com/gtag/js?id=G-MHFRN8QF4X"></script>
         <script>
-            window.dataLayer = window.dataLayer || [];
-            function gtag() { dataLayer.push(arguments); }
-            gtag('js', new Date());
+          window.dataLayer = window.dataLayer || [];
+          function gtag(){dataLayer.push(arguments);}
+          gtag('js', new Date());
 
-            gtag('config', 'G-ZWHGQ6Y5T1');
+          gtag('config', 'G-MHFRN8QF4X');
         </script>
     </environment>
 </head>
