--- a/BasicTools.Client/Pages/Json.razor
+++ b/BasicTools.Client/Pages/Json.razor
@@ -1,4 +1,9 @@
 ﻿@page "/json"
+@attribute [PageMetadata(
+Title = "Json",
+Description = "Parse, Validate and Format Json documents",
+Keywords = "JSON, javascript object notation, parser, format, online, tool, free"
+)]
 
 <h1>Json Parsing</h1>
 
