centralized tool page metadata

--- a/BasicTools.Client/Pages/Guids.razor
+++ b/BasicTools.Client/Pages/Guids.razor
@@ -1,9 +1,10 @@
 ﻿@page "/guids"
 @attribute [PageMetadata( 
-Title = "GUID Generation",
+Title = "GUIDs",
 Description = "Generate GUID/UUID values",
 Keywords = "guid, uuid, guid generator, uuid generator, online guid, onlineguid, globally unique identifier, universal unique identifier, java guid, java uuid, C# guid, C# uuid, globally unique identifier, unique identifier, tool, free"
 )]
+@attribute [ToolPage("GUID Generation", "Generate GUID/UUID values and output to various format using templates.", faIcon: "fa-atom")] 
 
 <h1>GUID / UUID Generation</h1>
 
