--- a/BasicTools.Client/Pages/Guids.razor
+++ b/BasicTools.Client/Pages/Guids.razor
@@ -70,7 +70,7 @@ Keywords = "guid, uuid, guid generator, uuid generator, online guid, onlineguid,
                     @exTemp.Name
                     @if (exTemp.Hint != null)
                     {
-                        <Icon Class="ml-1" data-toggle="tooltip" title="@exTemp.Hint" Name="IconName.QuestionCircle" />
+                        @*<Icon Class="ml-1" data-toggle="tooltip" title="@exTemp.Hint" Name="IconName.QuestionCircle" />*@
                     }
                     <button class="btn btn-sm btn-outline-info float-right" @onclick="exTemp.Select">Use</button>
                 </div>
