--- a/BasicTools.Client/Pages/Index.razor
+++ b/BasicTools.Client/Pages/Index.razor
@@ -15,7 +15,7 @@ Keywords = "online tool, free, dev tools"
     <div class="col-xl-4 col-lg-6 mb-4 d-flex align-items-stretch">
       <div class="card" style="width: 100%">
         <div class="card-header">
-          <Icon IconSize="IconSize.x2" Class="mr-2" Name="@tool.Value.FaIcon" />
+          @*<Icon IconSize="IconSize.x2" Class="mr-2" Name="@tool.Value.FaIcon" />*@
           <span class="h4">@tool.Value.Name</span>
         </div>
         <div class="card-body">
