--- a/BasicTools.Client/Pages/Json.razor
+++ b/BasicTools.Client/Pages/Json.razor
@@ -4,7 +4,7 @@ Title = "Json",
 Description = "Parse, Validate and Format Json documents",
 Keywords = "JSON, javascript object notation, parser, format, online, tool, free"
 )]
-@attribute [ToolPage("Json Parsing", "Parse, Validate and Format Json documents.", faIcon: "")]
+@attribute [ToolPage("Json Parsing", "Parse, Validate and Format Json documents.", "grading")]
 
 <h1>Json Parsing</h1>
 
