--- a/BasicTools.Client/Pages/Guids.razor
+++ b/BasicTools.Client/Pages/Guids.razor
@@ -12,15 +12,15 @@ Keywords = "guid, uuid, guid generator, uuid generator, online guid, onlineguid,
     <RightSidebar>
         <h4>Generation Mode:</h4>
         <ul>
-            <li><strong>Default:</strong><br />Creates GUIDs using the <a href="https://docs.microsoft.com/en-us/dotnet/api/system.guid.newguid" target="msRef">default .NET implementation</a> for creating GUIDs (ex: <span class="code">Guid.NewGuid()</span>)</li>
-            <li><strong>Cryptographic:</strong><br />Creates GUIDs using the <a href="https://docs.microsoft.com/en-us/dotnet/api/system.security.cryptography.randomnumbergenerator.getbytes" target="msRef">.NET's Random Number Generator</a> to obtain 16 random bytes and <a href="https://docs.microsoft.com/en-us/dotnet/api/system.guid.-ctor#System_Guid__ctor_System_Byte___" target="msRef">constructing a GUID</a> from it.</li>
+            <li><strong>Default:</strong><br />Creates GUIDs using the <a href="https://docs.microsoft.com/en-us/dotnet/api/system.guid.newguid" class="link-light" target="msRef">default .NET implementation</a> for creating GUIDs (ex: <span class="code">Guid.NewGuid()</span>)</li>
+            <li><strong>Cryptographic:</strong><br />Creates GUIDs using the <a href="https://docs.microsoft.com/en-us/dotnet/api/system.security.cryptography.randomnumbergenerator.getbytes" class="link-light" target="msRef">.NET's Random Number Generator</a> to obtain 16 random bytes and <a href="https://docs.microsoft.com/en-us/dotnet/api/system.guid.-ctor#System_Guid__ctor_System_Byte___" class="link-light" target="msRef">constructing a GUID</a> from it.</li>
         </ul>
 
         <hr />
 
         <h3>What is a GUID?</h3>
         <p class="mb-0">A GUID is an acronyom that stands for Globally Unique Identifier, they are also referred to as UUIDs or Universaly Unique Identifiers - there is no real difference between the two. Technically they are 128-bit unique reference numbers used in computing which are highly unlikely to repeat when generated despite there being no central GUID authority to ensure uniqueness.</p>
-        <p class="text-right"><small><a href="http://guid.one/guid" target="WhatsAGuid">(Full Reference)</a></small></p>
+        <p class="text-right"><small><a href="http://guid.one/guid" class="link-light" target="WhatsAGuid">(Full Reference)</a></small></p>
     </RightSidebar>
 </LayoutSetter>
 
