--- a/BasicTools.Client/Pages/Index.razor
+++ b/BasicTools.Client/Pages/Index.razor
@@ -12,7 +12,7 @@ Keywords = "online tool, free, dev tools"
 <div class="row">
     @foreach (var tool in RouteSources.ToolPages)
     {
-        <div class="col-xl-4 col-lg-6 mb-4 d-flex align-items-stretch">
+        <div class="col-xxl-3 col-xl-4 col-lg-6 mb-4 d-flex align-items-stretch">
             <div class="card" style="width: 100%">
                 <div class="card-header d-inline-flex">
                     <Icon Class="me-2 align-self-center" Name="@tool.Value.Icon" Size="IconSizes.Large" Style="IconStyles.TwoTone" />
@@ -28,5 +28,3 @@ Keywords = "online tool, free, dev tools"
         </div>
     }
 </div>
-
-<p class="mt-4">This site is an <a href="https://github.com/NArnott/BasicTools" target="gitRepo">open source project</a> hosted on GitHub. Contributions are welcome!</p>
