--- a/BasicTools.Client/wwwroot/css/app.css
+++ b/BasicTools.Client/wwwroot/css/app.css
@@ -1,21 +1,5 @@
-﻿.content {
-    padding-top: 1.1rem;
-}
-
-.code {
+﻿.code {
     font-family: monospace;
-}
-
-.sidebar a {
-    color: deepskyblue;
-}
-
-.sidebar hr {
-    background-color: white;
-}
-
-.sidebar ul {
-    padding-left: 20px;
 }
 
 #blazor-error-ui {
