--- a/BasicTools.Client/Shared/Icon.razor
+++ b/BasicTools.Client/Shared/Icon.razor
@@ -1,4 +1,4 @@
-﻿<span class="@IconClass @Class" style="@SizeStyle @CssStyle">@Name</span>
+﻿<span @attributes="OtherAttributes" class="@IconClass @Class" style="@SizeStyle @CssStyle">@Name</span>
 
 @code {
     //Name sources: https://fonts.google.com/icons
@@ -16,6 +16,9 @@
 
     [Parameter]
     public IconSizes Size { get; set; } = IconSizes.Medium;
+
+    [Parameter(CaptureUnmatchedValues = true)]
+    public Dictionary<string, object> OtherAttributes { get; set; }
 
     private string SizeStyle => $"font-size: {(byte)Size}px;";
 
